input directory fixed

--- a/pretrain_and_training.ipynb
+++ b/pretrain_and_training.ipynb
@@ -36,7 +36,7 @@
     "    \"TL_01.식당카페_05.식음료서빙.zip\",\n",
     "    \"TL_01.식당카페_06.결제_및_할인_포인트적립_안내.zip\",\n",
     "]\n",
-    "INPUT_DIR = Path(\"./\") # ZIP 파일이 위치한 디렉토리\n",
+    "INPUT_DIR = Path(\"/local_datasets/AACommu/Training/02.라벨링데이터\") # ZIP 파일이 위치한 디렉토리\n",
     "DEFAULT_CONTEXT = \"카페\"\n",
     "\n",
     "# 모든 대화 쌍을 저장할 리스트 (파일로 저장하지 않고 메모리에 유지)\n",
@@ -238,7 +238,7 @@
     "    \"VL_01.식당카페_05.식음료서빙_01.json.zip\",\n",
     "    \"VL_01.식당카페_06.결제_및_할인_포인트적립_안내_01.json.zip\",\n",
     "]\n",
-    "INPUT_DIR = Path(\"./\") # ZIP 파일이 위치한 디렉토리\n",
+    "INPUT_DIR = Path(\"/local_datasets/AACommu/Validation/02.라벨링데이터\") # ZIP 파일이 위치한 디렉토리\n",
     "DEFAULT_CONTEXT = \"카페\"\n",
     "\n",
     "# 모든 검증 쌍을 저장할 리스트\n",
