--- a/dataset_pretraining.ipynb
+++ b/dataset_pretraining.ipynb
@@ -15,6 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
     "import pandas as pd\n",
     "import unicodedata as ud\n",
     "import re\n",
@@ -22,7 +24,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# --- 기본 설정 ---\n",
-    "INPUT_PATH = \"/content/KakaoData.csv\"\n",
+    "INPUT_PATH = os.getenv('INUPT_PATH')\n",
     "OUT_DIR = Path(\"/content/kakao_clean_final3\")\n",
     "OUT_DIR.mkdir(parents=True, exist_ok=True)\n",
     "\n",
