--- a/AAC_model.ipynb
+++ b/AAC_model.ipynb
@@ -33,6 +33,11 @@
     "    # 1. 메인 데이터 로드 (JSON)\n",
     "    try:\n",
     "        df_combined = pd.read_json(main_file_path)\n",
+    "\n",
+    "        df_combined['label'] = 0\n",
+    "        df_combined.loc[df_combined.index % 2 == 0, 'label'] = 1 # 짝수 인덱스에 레이블 1 부여\n",
+    "        df_combined['text'] = df_combined['input_text']\n",
+    "        df_combined = df_combined.loc[:, ['text', 'label']]\n",
     "    except FileNotFoundError:\n",
     "        # 파일이 없을 경우 예시 데이터 생성\n",
     "        print(f\"⚠️ Warning: {main_file_path} not found. Using dummy data.\")\n",
